--- a/S05 - Recommender Systems/BLU11 - Personalized Recommenders/Exercise notebook.ipynb
+++ b/S05 - Recommender Systems/BLU11 - Personalized Recommenders/Exercise notebook.ipynb
@@ -2455,7 +2455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 27,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2493,7 +2493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 28,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2557,222 +2557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "movieId\n",
-       "1                                      pixar pixar fun\n",
-       "2            fantasy magicboardgame robinwilliams game\n",
-       "5                                     pregnancy remake\n",
-       "7                                               remake\n",
-       "11                                  politics president\n",
-       "                              ...                     \n",
-       "183611                      comedy funny rachelmcadams\n",
-       "184471    adventure aliciavikander videogameadaptation\n",
-       "187593                 joshbrolin ryanreynolds sarcasm\n",
-       "187595                           emiliaclarke starwars\n",
-       "193565                   anime comedy gintama remaster\n",
-       "Name: tag, Length: 1551, dtype: object"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_document_tags"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_ratings.groupby('movieId')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>genres</th>\n",
-       "      <th>year</th>\n",
-       "      <th>decade</th>\n",
-       "      <th>tags</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>movieId</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>adventure animation children comedy fantasy</td>\n",
-       "      <td>1995.0</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>pixar pixar fun</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>adventure children fantasy</td>\n",
-       "      <td>1995.0</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>fantasy magicboardgame robinwilliams game</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>comedy romance</td>\n",
-       "      <td>1995.0</td>\n",
-       "      <td>2000</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>comedy drama romance</td>\n",
-       "      <td>1995.0</td>\n",
-       "      <td>2000</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>comedy</td>\n",
-       "      <td>1995.0</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>pregnancy remake</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>188797</th>\n",
-       "      <td>comedy</td>\n",
-       "      <td>2018.0</td>\n",
-       "      <td>2020</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>188833</th>\n",
-       "      <td>adventure comedy fantasy</td>\n",
-       "      <td>2018.0</td>\n",
-       "      <td>2020</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>189381</th>\n",
-       "      <td>action crime thriller</td>\n",
-       "      <td>2018.0</td>\n",
-       "      <td>2020</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>189713</th>\n",
-       "      <td>comedy crime drama</td>\n",
-       "      <td>2018.0</td>\n",
-       "      <td>2020</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>190183</th>\n",
-       "      <td>sci-fi thriller</td>\n",
-       "      <td>2018.0</td>\n",
-       "      <td>2020</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>9298 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                              genres    year decade  \\\n",
-       "movieId                                                               \n",
-       "1        adventure animation children comedy fantasy  1995.0   2000   \n",
-       "2                         adventure children fantasy  1995.0   2000   \n",
-       "3                                     comedy romance  1995.0   2000   \n",
-       "4                               comedy drama romance  1995.0   2000   \n",
-       "5                                             comedy  1995.0   2000   \n",
-       "...                                              ...     ...    ...   \n",
-       "188797                                        comedy  2018.0   2020   \n",
-       "188833                      adventure comedy fantasy  2018.0   2020   \n",
-       "189381                         action crime thriller  2018.0   2020   \n",
-       "189713                            comedy crime drama  2018.0   2020   \n",
-       "190183                               sci-fi thriller  2018.0   2020   \n",
-       "\n",
-       "                                              tags  \n",
-       "movieId                                             \n",
-       "1                                  pixar pixar fun  \n",
-       "2        fantasy magicboardgame robinwilliams game  \n",
-       "3                                                   \n",
-       "4                                                   \n",
-       "5                                 pregnancy remake  \n",
-       "...                                            ...  \n",
-       "188797                                              \n",
-       "188833                                              \n",
-       "189381                                              \n",
-       "189713                                              \n",
-       "190183                                              \n",
-       "\n",
-       "[9298 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 76,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_movies_processed.loc[df_ratings.groupby('movieId').agg({'rating': sum}).rating.index]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 29,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2797,7 +2582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 30,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2959,7 +2744,7 @@
        "[9742 rows x 4 columns]"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2978,7 +2763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 31,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -3078,7 +2863,7 @@
        "5                                 pregnancy remake  "
       ]
      },
-     "execution_count": 82,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3117,7 +2902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -3144,14 +2929,16 @@
     "    -------\n",
     "    doc_tf_idf : csr_matrix, shape: (n_items, n_tfidf_features)\n",
     "    \"\"\"\n",
+    "    vectorizer = TfidfVectorizer()\n",
+    "    doc_tf_idf = vectorizer.fit_transform(doc_series)\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
     "    return doc_tf_idf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "deletable": false,
     "editable": false,
