--- a/S05 - Recommender Systems/BLU11 - Personalized Recommenders/Exercise notebook.ipynb
+++ b/S05 - Recommender Systems/BLU11 - Personalized Recommenders/Exercise notebook.ipynb
@@ -3016,7 +3016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -3043,15 +3043,23 @@
     "    -------\n",
     "    item_profiles : csr_matrix, shape: (n_items, n_tfidf_features)\n",
     "    \"\"\"\n",
-    "    # item_profiles = ...\n",
+    "    item_profiles = csr_matrix(\n",
+    "        np.hstack(\n",
+    "            tuple(\n",
+    "                get_tf_idf(df_movies_processed_w_ratings[col]).toarray() \n",
+    "                for col \n",
+    "                in df_movies_processed_w_ratings.columns\n",
+    "                )\n",
+    "            )\n",
+    "        )\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
     "    return item_profiles"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -3093,7 +3101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -3121,15 +3129,15 @@
     "    -------\n",
     "    user_profiles : csr_matrix, shape: (n_users, n_tfidf_features)\n",
     "    \"\"\"\n",
-    "    # user_profiles = ...\n",
+    "    user_profiles = np.dot(ratings, item_profiles)\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
     "    return user_profiles"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -3171,7 +3179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -3207,14 +3215,15 @@
     "    predictions : csr_matrix. shape: (n_users, n_items)\n",
     "                  Matrix with the predictions. Already rated content is suppressed to 0.\n",
     "    \"\"\"\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
-    "    return predictions"
+    "    predictions = cosine_similarity(user_profiles, item_profiles)\n",
+    "    predictions[R.nonzero()] = 0\n",
+    "    \n",
+    "    return csr_matrix(predictions)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -3256,7 +3265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -3269,11 +3278,228 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>genres</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>movieId</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>8633</th>\n",
+       "      <td>Last Starfighter, The</td>\n",
+       "      <td>Action|Adventure|Comedy|Sci-Fi</td>\n",
+       "      <td>1984.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1375</th>\n",
+       "      <td>Star Trek III: The Search for Spock</td>\n",
+       "      <td>Action|Adventure|Sci-Fi</td>\n",
+       "      <td>1984.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2105</th>\n",
+       "      <td>Tron</td>\n",
+       "      <td>Action|Adventure|Sci-Fi</td>\n",
+       "      <td>1982.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4941</th>\n",
+       "      <td>Flash Gordon</td>\n",
+       "      <td>Action|Adventure|Sci-Fi</td>\n",
+       "      <td>1980.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3704</th>\n",
+       "      <td>Mad Max Beyond Thunderdome</td>\n",
+       "      <td>Action|Adventure|Sci-Fi</td>\n",
+       "      <td>1985.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3702</th>\n",
+       "      <td>Mad Max</td>\n",
+       "      <td>Action|Adventure|Sci-Fi</td>\n",
+       "      <td>1979.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4987</th>\n",
+       "      <td>Spacehunter: Adventures in the Forbidden Zone</td>\n",
+       "      <td>Action|Adventure|Sci-Fi</td>\n",
+       "      <td>1983.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2528</th>\n",
+       "      <td>Logan's Run</td>\n",
+       "      <td>Action|Adventure|Sci-Fi</td>\n",
+       "      <td>1976.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3070</th>\n",
+       "      <td>Adventures of Buckaroo Banzai Across the 8th D...</td>\n",
+       "      <td>Adventure|Comedy|Sci-Fi</td>\n",
+       "      <td>1984.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26444</th>\n",
+       "      <td>Hitch Hikers Guide to the Galaxy, The</td>\n",
+       "      <td>Adventure|Comedy|Sci-Fi</td>\n",
+       "      <td>1981.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4953</th>\n",
+       "      <td>People That Time Forgot, The</td>\n",
+       "      <td>Adventure|Sci-Fi</td>\n",
+       "      <td>1977.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69453</th>\n",
+       "      <td>Land That Time Forgot, The</td>\n",
+       "      <td>Adventure|Sci-Fi</td>\n",
+       "      <td>1975.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1371</th>\n",
+       "      <td>Star Trek: The Motion Picture</td>\n",
+       "      <td>Adventure|Sci-Fi</td>\n",
+       "      <td>1979.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021</th>\n",
+       "      <td>Dune</td>\n",
+       "      <td>Adventure|Sci-Fi</td>\n",
+       "      <td>1984.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3401</th>\n",
+       "      <td>Baby... Secret of the Lost Legend</td>\n",
+       "      <td>Adventure|Sci-Fi</td>\n",
+       "      <td>1985.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2615</th>\n",
+       "      <td>My Science Project</td>\n",
+       "      <td>Adventure|Sci-Fi</td>\n",
+       "      <td>1985.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3703</th>\n",
+       "      <td>Road Warrior, The (Mad Max 2)</td>\n",
+       "      <td>Action|Adventure|Sci-Fi|Thriller</td>\n",
+       "      <td>1981.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1129</th>\n",
+       "      <td>Escape from New York</td>\n",
+       "      <td>Action|Adventure|Sci-Fi|Thriller</td>\n",
+       "      <td>1981.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3638</th>\n",
+       "      <td>Moonraker</td>\n",
+       "      <td>Action|Adventure|Sci-Fi|Thriller</td>\n",
+       "      <td>1979.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7481</th>\n",
+       "      <td>Enemy Mine</td>\n",
+       "      <td>Adventure|Drama|Sci-Fi</td>\n",
+       "      <td>1985.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                     title  \\\n",
+       "movieId                                                      \n",
+       "8633                                 Last Starfighter, The   \n",
+       "1375                   Star Trek III: The Search for Spock   \n",
+       "2105                                                  Tron   \n",
+       "4941                                          Flash Gordon   \n",
+       "3704                            Mad Max Beyond Thunderdome   \n",
+       "3702                                               Mad Max   \n",
+       "4987         Spacehunter: Adventures in the Forbidden Zone   \n",
+       "2528                                           Logan's Run   \n",
+       "3070     Adventures of Buckaroo Banzai Across the 8th D...   \n",
+       "26444                Hitch Hikers Guide to the Galaxy, The   \n",
+       "4953                          People That Time Forgot, The   \n",
+       "69453                           Land That Time Forgot, The   \n",
+       "1371                         Star Trek: The Motion Picture   \n",
+       "2021                                                  Dune   \n",
+       "3401                     Baby... Secret of the Lost Legend   \n",
+       "2615                                    My Science Project   \n",
+       "3703                         Road Warrior, The (Mad Max 2)   \n",
+       "1129                                  Escape from New York   \n",
+       "3638                                             Moonraker   \n",
+       "7481                                            Enemy Mine   \n",
+       "\n",
+       "                                   genres    year  \n",
+       "movieId                                            \n",
+       "8633       Action|Adventure|Comedy|Sci-Fi  1984.0  \n",
+       "1375              Action|Adventure|Sci-Fi  1984.0  \n",
+       "2105              Action|Adventure|Sci-Fi  1982.0  \n",
+       "4941              Action|Adventure|Sci-Fi  1980.0  \n",
+       "3704              Action|Adventure|Sci-Fi  1985.0  \n",
+       "3702              Action|Adventure|Sci-Fi  1979.0  \n",
+       "4987              Action|Adventure|Sci-Fi  1983.0  \n",
+       "2528              Action|Adventure|Sci-Fi  1976.0  \n",
+       "3070              Adventure|Comedy|Sci-Fi  1984.0  \n",
+       "26444             Adventure|Comedy|Sci-Fi  1981.0  \n",
+       "4953                     Adventure|Sci-Fi  1977.0  \n",
+       "69453                    Adventure|Sci-Fi  1975.0  \n",
+       "1371                     Adventure|Sci-Fi  1979.0  \n",
+       "2021                     Adventure|Sci-Fi  1984.0  \n",
+       "3401                     Adventure|Sci-Fi  1985.0  \n",
+       "2615                     Adventure|Sci-Fi  1985.0  \n",
+       "3703     Action|Adventure|Sci-Fi|Thriller  1981.0  \n",
+       "1129     Action|Adventure|Sci-Fi|Thriller  1981.0  \n",
+       "3638     Action|Adventure|Sci-Fi|Thriller  1979.0  \n",
+       "7481               Adventure|Drama|Sci-Fi  1985.0  "
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "top_movies_ids = get_top_n(pred, john_id, 20)\n",
     "df_movies.loc[top_movies_ids]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
