--- a/S05 - Recommender Systems/BLU12 - Workflow/Exercise notebook.ipynb
+++ b/S05 - Recommender Systems/BLU12 - Workflow/Exercise notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -73,14 +73,15 @@
     "                    'I do solemnly swear I have reviewed the Workflow notebook and I am ready for the Hackathon!'\n",
     "    \"\"\"\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
+    "    return 'I do solemnly swear I have reviewed the Workflow notebook and I am ready for the Hackathon!'\n",
     "\n",
     "oath = ds_recommenders_oath_of_office()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -103,7 +104,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "blu11",
    "language": "python",
    "name": "python3"
   },
@@ -117,7 +118,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
+   "version": "3.8.16"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "103b4fb37b54f7310d732ab1747cad464569f0fb4ba640270bf3953a8dfde466"
+   }
   }
  },
  "nbformat": 4,
