--- a/S06 - DS in the Real World/BLU13 - Basic Model Deployment/Exercise notebook.ipynb
+++ b/S06 - DS in the Real World/BLU13 - Basic Model Deployment/Exercise notebook.ipynb
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -346,23 +346,11 @@
      "task": false
     }
    },
-   "outputs": [
-    {
-     "ename": "NotImplementedError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m/home/jrr/batch6-workspace/S06 - DS in the Real World/BLU13 - Basic Model Deployment/Exercise notebook.ipynb Cell 10\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/jrr/batch6-workspace/S06%20-%20DS%20in%20the%20Real%20World/BLU13%20-%20Basic%20Model%20Deployment/Exercise%20notebook.ipynb#X13sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# Use cross validation with 5 folds and ROC_AUC as metric, to check your model's performance\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/jrr/batch6-workspace/S06%20-%20DS%20in%20the%20Real%20World/BLU13%20-%20Basic%20Model%20Deployment/Exercise%20notebook.ipynb#X13sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39m# roc_aucs = cross_val_score(...)\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/jrr/batch6-workspace/S06%20-%20DS%20in%20the%20Real%20World/BLU13%20-%20Basic%20Model%20Deployment/Exercise%20notebook.ipynb#X13sdnNjb2RlLXJlbW90ZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39m# YOUR CODE HERE\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell://wsl%2Bubuntu/home/jrr/batch6-workspace/S06%20-%20DS%20in%20the%20Real%20World/BLU13%20-%20Basic%20Model%20Deployment/Exercise%20notebook.ipynb#X13sdnNjb2RlLXJlbW90ZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mNotImplementedError\u001b[39;00m()\n",
-      "\u001b[0;31mNotImplementedError\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Use cross validation with 5 folds and ROC_AUC as metric, to check your model's performance\n",
     "roc_aucs = cross_val_score(\n",
-    "    \n",
+    "    pipeline, X, (y==' >50K').astype(int), cv=5\n",
     ")\n",
     "# YOUR CODE HERE\n",
     "# raise NotImplementedError()"
@@ -370,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -392,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -404,16 +392,30 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(steps=[('onehotencoder',\n",
+       "                 OneHotEncoder(cols=['education', 'native-country'])),\n",
+       "                ('logisticregression', LogisticRegression())])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Now fit the pipeline to all the training data\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()\n",
+    "pipeline.fit(X, (y==' >50K').astype(int))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -458,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -487,12 +489,14 @@
    "source": [
     "# Serialize the column names from the X DataFrame into a file named columns.json\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()\n",
+    "with open(os.path.join(TMP_DIR, \"columns.json\"), 'w') as fh:\n",
+    "    json.dump(X.columns.tolist(), fh)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -516,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -532,12 +536,14 @@
    "source": [
     "# Pickle the dtypes of the columns from the X DataFrame into a file named dtypes.pickle\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()\n",
+    "with open(os.path.join(TMP_DIR, \"dtypes.pickle\"), 'wb') as fh:\n",
+    "    pickle.dump(X.dtypes, fh)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -561,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -573,16 +579,28 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['/tmp/pipeline.pickle']"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Pickle the fitted pipeline into a file named pipeline.pickle\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()\n",
+    "joblib.dump(pipeline, os.path.join(TMP_DIR, \"pipeline.pickle\")) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -784,10 +802,10 @@
    "source": [
     "# When the predict endpoint of your flask app is working as expected,\n",
     "# set variable predict_endpoint_working_fine to True\n",
-    "predict_endpoint_working_fine = False\n",
+    "predict_endpoint_working_fine = True\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()"
    ]
   },
   {
@@ -923,10 +941,10 @@
    "source": [
     "# When the predict endpoint of your flask app is working as expected,\n",
     "# set variable update_endpoint_working_fine to True\n",
-    "update_endpoint_working_fine = False\n",
+    "update_endpoint_working_fine = True\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()"
    ]
   },
   {
@@ -990,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1006,15 +1024,15 @@
    "source": [
     "# In this test, we will call your app to check if it's working as expected\n",
     "# Assign the variable APP_NAME to the name of your railway app\n",
-    "# APP_NAME = ...\n",
+    "APP_NAME = \"railway-model-deploy-production-a811.up.railway.app\"\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1052,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1085,6 +1103,13 @@
     "assert \"true_class\" in r.json()\n",
     "assert r.json()[\"true_class\"] == 1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
