--- a/S06 - DS in the Real World/BLU14 - Deployment in Real World/Exercise notebook.ipynb
+++ b/S06 - DS in the Real World/BLU14 - Deployment in Real World/Exercise notebook.ipynb
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,14 +432,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_17365/1639723694.py:1: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_17967/1639723694.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -488,7 +488,7 @@
        "                ('logisticregression', LogisticRegression())])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -524,7 +524,7 @@
        "['/tmp/pipeline.pickle']"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 10,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -818,7 +818,34 @@
     "            ```\n",
     "    \"\"\"\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
+    "\n",
+    "    data_input = pd.DataFrame([{\n",
+    "                        \"age\": request[\"data\"][\"age\"], \n",
+    "                        \"workclass\": request[\"data\"][\"workclass\"], \n",
+    "                        \"education\": request[\"data\"][\"education\"], \n",
+    "                        \"marital-status\": request[\"data\"][\"marital-status\"], \n",
+    "                        \"race\":  request[\"data\"][\"race\"],\n",
+    "                        \"sex\": request[\"data\"][\"sex\"].lower(),\n",
+    "                        \"capital-gain\": request[\"data\"][\"capital-gain\"], \n",
+    "                        \"capital-loss\": request[\"data\"][\"capital-loss\"], \n",
+    "                        \"hours-per-week\": request[\"data\"][\"hours-per-week\"]}\n",
+    "                        ], columns=columns).astype(dtypes)\n",
+    "\n",
+    "    response = {\n",
+    "                \"observation_id\": request[\"observation_id\"],\n",
+    "                \"age\": request[\"data\"][\"age\"],\n",
+    "                \"sex\": request[\"data\"][\"sex\"],\n",
+    "                \"race\": request[\"data\"][\"race\"],\n",
+    "                \"workclass\": request[\"data\"][\"workclass\"],\n",
+    "                \"education\": request[\"data\"][\"education\"],\n",
+    "                \"marital-status\": request[\"data\"][\"marital-status\"],\n",
+    "                \"capital-gain\": request[\"data\"][\"capital-gain\"],\n",
+    "                \"capital-loss\": request[\"data\"][\"capital-loss\"],\n",
+    "                \"hours-per-week\": request[\"data\"][\"hours-per-week\"],\n",
+    "                \"prediction\": pipeline.predict(data_input),\n",
+    "                \"probability\": pipeline.predict_proba(data_input)[0][0]\n",
+    "            }\n",
     "    return response"
    ]
   },
@@ -842,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -959,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -986,7 +1013,9 @@
     "    \"\"\"\n",
     "\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
+    "\n",
+    "    categories = df[column].unique().tolist()\n",
     "\n",
     "    return categories\n",
     "    "
@@ -1012,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1098,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1112,15 +1141,15 @@
    },
    "outputs": [],
    "source": [
-    "# answer_q32i = 'A' or 'B' or 'C' \n",
+    "answer_q32i = 'B'\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1171,7 +1200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1185,15 +1214,15 @@
    },
    "outputs": [],
    "source": [
-    "# answer_q32ii = 'A' or 'B' or 'C' \n",
+    "answer_q32ii = 'A' \n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "deletable": false,
     "editable": false,
