--- a/S06 - DS in the Real World/BLU14 - Deployment in Real World/Exercise notebook.ipynb
+++ b/S06 - DS in the Real World/BLU14 - Deployment in Real World/Exercise notebook.ipynb
@@ -1899,7 +1899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 189,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1914,7 +1914,7 @@
    "outputs": [],
    "source": [
     "# Assign the variable APP_NAME to the name of your heroku app\n",
-    "# APP_NAME = ...\n",
+    "APP_NAME = 'railway-model-deployblu14-production.up.railway.app'\n",
     "\n",
     "# YOUR CODE HERE\n",
     "# raise NotImplementedError()"
@@ -1941,7 +1941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 192,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1957,14 +1957,14 @@
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'APP_NAME' is not defined",
+     "ename": "AssertionError",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/home/xjrr/batch6-workspace/S06 - DS in the Real World/BLU14 - Deployment in Real World/Exercise notebook.ipynb Cell 43\u001b[0m in \u001b[0;36m<cell line: 6>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/xjrr/batch6-workspace/S06%20-%20DS%20in%20the%20Real%20World/BLU14%20-%20Deployment%20in%20Real%20World/Exercise%20notebook.ipynb#X60sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# Test locally\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/xjrr/batch6-workspace/S06%20-%20DS%20in%20the%20Real%20World/BLU14%20-%20Deployment%20in%20Real%20World/Exercise%20notebook.ipynb#X60sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39m# url = f\"http://localhost:5000/predict\"\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/xjrr/batch6-workspace/S06%20-%20DS%20in%20the%20Real%20World/BLU14%20-%20Deployment%20in%20Real%20World/Exercise%20notebook.ipynb#X60sdnNjb2RlLXJlbW90ZQ%3D%3D?line=2'>3</a>\u001b[0m \n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/xjrr/batch6-workspace/S06%20-%20DS%20in%20the%20Real%20World/BLU14%20-%20Deployment%20in%20Real%20World/Exercise%20notebook.ipynb#X60sdnNjb2RlLXJlbW90ZQ%3D%3D?line=3'>4</a>\u001b[0m \n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/xjrr/batch6-workspace/S06%20-%20DS%20in%20the%20Real%20World/BLU14%20-%20Deployment%20in%20Real%20World/Exercise%20notebook.ipynb#X60sdnNjb2RlLXJlbW90ZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39m# Testing the predict/update endpoint\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell://wsl%2Bubuntu/home/xjrr/batch6-workspace/S06%20-%20DS%20in%20the%20Real%20World/BLU14%20-%20Deployment%20in%20Real%20World/Exercise%20notebook.ipynb#X60sdnNjb2RlLXJlbW90ZQ%3D%3D?line=5'>6</a>\u001b[0m url \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mhttps://\u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m/predict\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(APP_NAME)\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/xjrr/batch6-workspace/S06%20-%20DS%20in%20the%20Real%20World/BLU14%20-%20Deployment%20in%20Real%20World/Exercise%20notebook.ipynb#X60sdnNjb2RlLXJlbW90ZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39m################################################\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/xjrr/batch6-workspace/S06%20-%20DS%20in%20the%20Real%20World/BLU14%20-%20Deployment%20in%20Real%20World/Exercise%20notebook.ipynb#X60sdnNjb2RlLXJlbW90ZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39m# Test with good payload\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/xjrr/batch6-workspace/S06%20-%20DS%20in%20the%20Real%20World/BLU14%20-%20Deployment%20in%20Real%20World/Exercise%20notebook.ipynb#X60sdnNjb2RlLXJlbW90ZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39m################################################\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/xjrr/batch6-workspace/S06%20-%20DS%20in%20the%20Real%20World/BLU14%20-%20Deployment%20in%20Real%20World/Exercise%20notebook.ipynb#X60sdnNjb2RlLXJlbW90ZQ%3D%3D?line=12'>13</a>\u001b[0m payload \u001b[39m=\u001b[39m {\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/xjrr/batch6-workspace/S06%20-%20DS%20in%20the%20Real%20World/BLU14%20-%20Deployment%20in%20Real%20World/Exercise%20notebook.ipynb#X60sdnNjb2RlLXJlbW90ZQ%3D%3D?line=13'>14</a>\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mobservation_id\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39mstr\u001b[39m(uuid4()),\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/xjrr/batch6-workspace/S06%20-%20DS%20in%20the%20Real%20World/BLU14%20-%20Deployment%20in%20Real%20World/Exercise%20notebook.ipynb#X60sdnNjb2RlLXJlbW90ZQ%3D%3D?line=14'>15</a>\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mdata\u001b[39m\u001b[39m\"\u001b[39m: \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/xjrr/batch6-workspace/S06%20-%20DS%20in%20the%20Real%20World/BLU14%20-%20Deployment%20in%20Real%20World/Exercise%20notebook.ipynb#X60sdnNjb2RlLXJlbW90ZQ%3D%3D?line=25'>26</a>\u001b[0m         }\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/xjrr/batch6-workspace/S06%20-%20DS%20in%20the%20Real%20World/BLU14%20-%20Deployment%20in%20Real%20World/Exercise%20notebook.ipynb#X60sdnNjb2RlLXJlbW90ZQ%3D%3D?line=26'>27</a>\u001b[0m }\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'APP_NAME' is not defined"
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m/home/xjrr/batch6-workspace/S06 - DS in the Real World/BLU14 - Deployment in Real World/Exercise notebook.ipynb Cell 43\u001b[0m in \u001b[0;36m<cell line: 32>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/xjrr/batch6-workspace/S06%20-%20DS%20in%20the%20Real%20World/BLU14%20-%20Deployment%20in%20Real%20World/Exercise%20notebook.ipynb#X60sdnNjb2RlLXJlbW90ZQ%3D%3D?line=29'>30</a>\u001b[0m r \u001b[39m=\u001b[39m requests\u001b[39m.\u001b[39mpost(url, json\u001b[39m=\u001b[39mpayload)\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/xjrr/batch6-workspace/S06%20-%20DS%20in%20the%20Real%20World/BLU14%20-%20Deployment%20in%20Real%20World/Exercise%20notebook.ipynb#X60sdnNjb2RlLXJlbW90ZQ%3D%3D?line=30'>31</a>\u001b[0m \u001b[39massert\u001b[39;00m \u001b[39misinstance\u001b[39m(r, requests\u001b[39m.\u001b[39mResponse)\n\u001b[0;32m---> <a href='vscode-notebook-cell://wsl%2Bubuntu/home/xjrr/batch6-workspace/S06%20-%20DS%20in%20the%20Real%20World/BLU14%20-%20Deployment%20in%20Real%20World/Exercise%20notebook.ipynb#X60sdnNjb2RlLXJlbW90ZQ%3D%3D?line=31'>32</a>\u001b[0m \u001b[39massert\u001b[39;00m r\u001b[39m.\u001b[39mok\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/xjrr/batch6-workspace/S06%20-%20DS%20in%20the%20Real%20World/BLU14%20-%20Deployment%20in%20Real%20World/Exercise%20notebook.ipynb#X60sdnNjb2RlLXJlbW90ZQ%3D%3D?line=33'>34</a>\u001b[0m response \u001b[39m=\u001b[39m r\u001b[39m.\u001b[39mjson()\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/xjrr/batch6-workspace/S06%20-%20DS%20in%20the%20Real%20World/BLU14%20-%20Deployment%20in%20Real%20World/Exercise%20notebook.ipynb#X60sdnNjb2RlLXJlbW90ZQ%3D%3D?line=35'>36</a>\u001b[0m \u001b[39massert\u001b[39;00m \u001b[39m'\u001b[39m\u001b[39mprediction\u001b[39m\u001b[39m'\u001b[39m \u001b[39min\u001b[39;00m response, response\n",
+      "\u001b[0;31mAssertionError\u001b[0m: "
      ]
     }
    ],
