--- a/S06 - DS in the Real World/BLU15 - Model CSI/Exercise notebook.ipynb
+++ b/S06 - DS in the Real World/BLU15 - Model CSI/Exercise notebook.ipynb
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "d89005ff",
    "metadata": {
     "deletable": false,
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "249e04b7",
    "metadata": {
     "deletable": false,
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "669b5f59",
    "metadata": {
     "deletable": false,
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "7166d349",
    "metadata": {
     "deletable": false,
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "326961f9",
    "metadata": {
     "deletable": false,
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "6522bddb",
    "metadata": {
     "deletable": false,
@@ -687,7 +687,7 @@
        "0.9331439540471267"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "fe6f83a4",
    "metadata": {
     "deletable": false,
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "ca6b57b7",
    "metadata": {},
    "outputs": [],
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "09bdf1ae",
    "metadata": {
     "deletable": false,
@@ -822,7 +822,7 @@
        " 'native-country': 0.9999762326014933}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -837,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "id": "9e97d294",
    "metadata": {
     "deletable": false,
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "id": "1de57462",
    "metadata": {
     "deletable": false,
@@ -925,14 +925,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7260acb4",
+   "id": "2f674214",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "aa5dd4c3",
    "metadata": {
     "deletable": false,
@@ -947,15 +947,15 @@
    },
    "outputs": [],
    "source": [
-    "df_combined = \n",
+    "df_combined = pd.concat((df_original.assign(is_new=False), df_new.assign(is_new=True)))\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "04c4928a",
    "metadata": {
     "deletable": false,
@@ -1028,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "d23bc1d6",
    "metadata": {
     "deletable": false,
@@ -1044,12 +1044,27 @@
    "outputs": [],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()\n",
+    "df_combined.salary = df_combined.salary.apply(lambda x: True if x=='>50K' else False)\n",
+    "df_train, df_test = train_test_split(df_combined, test_size=0.25, random_state=42, stratify=df_combined['is_new'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
+   "id": "0ad23755",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, y_train, X_test, y_test = (\n",
+    "    df_train.drop(columns='salary'), df_train.salary,\n",
+    "    df_test.drop(columns='salary'), df_test.salary,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "512b9a85",
    "metadata": {
     "deletable": false,
@@ -1076,16 +1091,6 @@
     "assert y_test.shape == (8141,), 'X_train shape is wrong. Are you sure test size is 25%?'\n",
     "assert sum(X_train['is_new']) == 10920, 'is_new column in Training set has a wrong number of True values. Make sure to have 25% of new values'\n",
     "assert sum(X_test['is_new']) == 3641, 'is_new column in Test set has a wrong number of True values. Make sure to have 25% of new values'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "704f67c4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_train[target].dtype == 'bool'"
    ]
   },
   {
@@ -1127,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "67c743af",
    "metadata": {
     "deletable": false,
